update console/command route and add makefile
